# beatsaber-hook

./: .gitignore  Android.mk  Android.tests.mk  CMakeLists.txt  README.md  build.ps1  copy.ps1  make-tests.ps1  mod.template.json  mod.template.tests.json  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml  publish.yml
shared/config/: config-utils.hpp
shared/customui/: customui.cpp  customui.hpp  methodwrapper.cpp  methodwrapper.hpp
shared/customui/tmpro/: textmeshprougui.hpp  tmp_asset.hpp  tmp_fontasset.cpp  tmp_fontasset.hpp  tmp_text.cpp  tmp_text.hpp
shared/customui/unityengine/: behaviour.hpp  canvas.cpp  canvas.hpp  component.hpp  gameobject.cpp  gameobject.hpp  material.hpp  monobehaviour.cpp  monobehaviour.hpp  object.cpp  object.hpp  recttransform.hpp  resources.hpp  scriptableobject.hpp  sprite.hpp  transform.cpp  transform.hpp
shared/customui/unityengine/eventsystems/: uibehaviour.cpp  uibehaviour.hpp
shared/customui/unityengine/ui/: button.cpp  button.hpp  canvasscaler.hpp  graphic.hpp  image.cpp  image.hpp  maskablegraphic.hpp  selectable.hpp
shared/utils/: accessor-wrapper-types.hpp  base-wrapper-type.hpp  better_span.hpp  byref.hpp  capstone-utils.hpp  early-mod-checks.hpp  enum-type.hpp  enum-wrapper-type.hpp  gc-alloc.hpp  hook-tracker.hpp  hooking.hpp  il2cpp-functions.hpp  il2cpp-type-check.hpp  il2cpp-utils-boxing.hpp  il2cpp-utils-classes.hpp  il2cpp-utils-exceptions.hpp  il2cpp-utils-fields.hpp  il2cpp-utils-methods.hpp  il2cpp-utils-properties.hpp  il2cpp-utils.hpp  instruction-parsing.hpp  logging.hpp  manual-il2cpp-typedefs.h  result.hpp  size-concepts.hpp  type-concepts.hpp  typedefs-array.hpp  typedefs-delegate.hpp  typedefs-disposal.hpp  typedefs-list.hpp  typedefs-object.hpp  typedefs-string.hpp  typedefs-wrappers.hpp  typedefs.h  utils-functions.h  utils.h  value-type.hpp  value-wrapper-type.hpp  vectors.h
src/config/: config-utils.cpp
src/inline-hook/: And64InlineHook.cpp
src/tests/: accessor-wrapper-tests.cpp  array-wrapper-tests.cpp  better-span-tests.cpp  byref-tests.cpp  hook-tests.cpp  il2cpp-tests.cpp  list-wrapper-tests.cpp  safeptr-tests.cpp  string-tests.cpp  test-check.cpp  thread-tests.cpp  unity-wrapper-tests.cpp
src/utils/: capstone-utils.cpp  gc-alloc.cpp  hook-tracker.cpp  il2cpp-functions.cpp  il2cpp-type-check.cpp  il2cpp-utils-classes.cpp  il2cpp-utils-exceptions.cpp  il2cpp-utils-fields.cpp  il2cpp-utils-methods.cpp  il2cpp-utils-properties.cpp  il2cpp-utils.cpp  logging.cpp  typedefs-wrapper.cpp  utils.cpp
